--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -53,6 +54,7 @@ android {
         dependencies {
             implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
             implementation("com.google.firebase:firebase-analytics-ktx")
+            implementation 'androidx.multidex:multidex:2.0.1'
         }
     }
 }
