--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^6.0.2
+  easy_linkedin_login: ^2.0.2
 
 dev_dependencies:
   flutter_test:
