--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_facebook_auth: ^6.0.2
   easy_linkedin_login: ^2.0.2
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
